# modern_cmake_example

./: CMakeLists.txt  Dockerfile  ReadMe.md
app/: CMakeLists.txt  main.cpp
include/lib_a/: helloworld.pb.cc  helloworld.pb.h  lib_a.hpp
proto/: helloworld.proto
src/: CMakeLists.txt
src/lib_a/: CMakeLists.txt
tests/: CMakeLists.txt  test_file.cpp  test_main.cpp
