#---------------------SET COMPONENT NAME---------------------------------------#
set(PROJECT ICOL.example.application.main)
#------------------------------------------------------------------------------#
#---------------------SET LOCAL NAME TO LINK COMPONENT-------------------------#
set(SERVICE_LIB ICOL.example.businessLayer.lib_a)
#------------------------------------------------------------------------------#
#-----------------------INCLUDE HEADER-----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------SET PROTO FILE-------------------------------------------#
#------------------------------------------------------------------------------#
#---------------------FIND PACKAGES--------------------------------------------#
find_package(Threads REQUIRED)
#------------------------------------------------------------------------------#
#-----------------------INCLUDE HEADER-----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------GENERATE AUTOCODE----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------ADD SOURCE-----------------------------------------------#
set(SERVER ${PROJECT})
set(SERVER_SOURCE main.cpp)
#------------------------------------------------------------------------------#
#---------------------ADD DEFINITION-------------------------------------------#
add_definitions(-fcoroutines)
add_definitions(-fno-exceptions)
add_definitions(-fexceptions)
#------------------------------------------------------------------------------#
#--------------------INCLUDE DIRS----------------------------------------------#
#------------------------------------------------------------------------------#
#---------------------ADD EXECUTE----------------------------------------------#
add_executable(${SERVER}
        ${SERVER_SOURCE})
#------------------------------------------------------------------------------#
#--------------------------REQUIRED STD----------------------------------------#
target_compile_features(${SERVER} PRIVATE cxx_std_20)
#------------------------------------------------------------------------------#
#---------------------LINK COMPONENTS------------------------------------------#
target_link_libraries(${SERVER} PUBLIC ${SERVICE_LIB})
if (CMAKE_BUILD_TYPE MATCHES Release)
    target_link_libraries(${SERVER} PUBLIC ${CONAN_LIBS})
endif ()
#------------------------------------------------------------------------------#
#---------------------------PVS STUDIO ANALYZE---------------------------------#
#---------------------INSTALL--------------------------------------------------#
#install(TARGETS ${PROJECT} DESTINATION bin)
#------------------------------------------------------------------------------#